# uncver-artifact-lib

./: .gitignore  CHANGELOG.md  README.md  artifact.json  docker-compose-file-ops.yml  simple-voice-bridge.js  voice-chat.html
.github/workflows/: orchestrate.yml  release-create.yml  release-delete.yml  release-discover.yml  release-gemma3-1b.yml  release-knowledge-graph.yml  release-mic.yml  release-ngrok.yml  release-piper.yml  release-please.yml  release-share.yml  release-start.yml  release-stop.yml  release-traefik.yml  release-whisper.yml  release.yml
artifacts/: artifact.json
artifacts/.github/workflows/: release.yml
create/: README.md  artifact.json
create/.github/workflows/: release.yml
create/include/: redis_listener.h
create/src/: artifact_creator.cpp  git_clone.cpp
delete/: artifact.json
delete/include/: artifact_deleter.h
delete/src/: redis_listener.cpp
discover/: .gitignore  README.md  artifact.json
discover/internal/models/: artifact.go
docs/: ARTIFACT_DEPENDENCIES.md  DOMAIN_SYSTEM.md  LOCAL_WEBSOCKET_URL.md  MERCURY_KG_INTEGRATION.md  P2P_ARCHITECTURE.md  P2P_GUIDE.md
file-read/: README.md  artifact.json  package.json
file-read/src/: index.js
file-write/: README.md  artifact.json  package.json
file-write/src/: index.js
folder-create/: Dockerfile  README.md  artifact.json  package.json
folder-create/src/: index.js
gemma3.1b/: Dockerfile  README.md  artifact.json  docker-compose.yml  package-lock.json  package.json
gemma3.1b/src/: index.js
knowledge-graph/: README.md  artifact.json  go.mod  kg.json
mecury-inception-listener/: Dockerfile  README.md  artifact.json  go.mod
mecury-inception-listener/.github/workflows/: build-push.yml  release.yml
mic/: Dockerfile  artifact.json  go.mod
mic-capture/: Dockerfile  README.md  package.json
mic-capture/src/: index.js
mic-host-capture/: index.js  package-lock.json  package.json
mic/cmd/server/: main.go
ngrok/: README.md  artifact.json  entrypoint.sh
piper/: Dockerfile  artifact.json  go.mod
piper/cmd/server/: main.go
redis-gui/: artifact.json  styles.css
redis-stream/: Dockerfile  artifact.json  docker-compose-full.yml
redis-stream-chat-web/: Dockerfile  README.md  artifact.json  docker-compose.yml  package.json
redis-stream-chat-web/public/: app.js  index.html  styles.css
redis-stream-chat-web/src/: server.js
redis-stream-gui/: artifact.json  commands.json  index.html  main.js  package.json  renderer.js  server.js
redis-stream-gui/.github/workflows/: release.yml
redis-stream-gui/public/: index.html  renderer.js  styles.css
redis-stream-push-gui/: Dockerfile  artifact.json  autonomous.js  commands.json  package.json  server.js  socket.js
redis-stream-push-gui/public/: index.html  renderer.js  styles.css
redis-stream/.github/workflows/: release.yml
scripts/: build.sh  get-domain.sh  package.sh  test.sh
share/: artifact.json
share/.github/workflows/: release.yml
share/src/: artifact_reader.cpp  main.cpp  share_client.cpp
start/: CMakeLists.txt  Dockerfile  artifact.json
start/.github/workflows/: release.yml
start/include/: artifact_starter.h
start/src/: main.cpp  redis_listener.cpp
stop/: Dockerfile  artifact.json
stop/src/: artifact_stopper.cpp
traefik/: Dockerfile  README.md  artifact.json  traefik.yml
tts-host-listener/: index.js  package-lock.json  package.json
uncver-artifacts/: .gitignore  AGENTS.md  Cargo.toml  build.rs  hot-reload.sh  release-please-config.json
uncver-artifacts/.agent/knowledge/: build.md  podman.md  ui.md
uncver-artifacts/.agent/rules/: knowledge_management.md
uncver-artifacts/.github/workflows/: ci.yml
uncver-artifacts/scripts/: install-podman.sh
uncver-artifacts/src/: lib.rs  main.rs
uncver-artifacts/src/artifacts/: builder.rs  mod.rs  watcher.rs
uncver-artifacts/src/podman/: install.rs  machine.rs  mod.rs  runner.rs
uncver-create/: CMakeLists.txt  Dockerfile
uncver-create/include/: artifact_creator.h  git_clone.h
uncver-create/src/: main.cpp  redis_listener.cpp
uncver-delete/: CMakeLists.txt  Dockerfile  README.md
uncver-delete/include/: redis_listener.h
uncver-delete/src/: artifact_deleter.cpp  main.cpp
uncver-discover/: .env.example  Dockerfile  go.mod  go.sum
uncver-discover/internal/db/: database.go
uncver-discover/internal/redis/: client.go
uncver-discover/internal/registry/: service.go
uncver-discover/internal/websocket/: handler.go
uncver-ngrok/: Dockerfile
uncver-redis-stream/: README.md  docker-compose.yml
uncver-share/: CMakeLists.txt  Dockerfile  README.md
uncver-share/include/: artifact_reader.h  share_client.h
uncver-start/: README.md
uncver-start/include/: redis_listener.h
uncver-start/src/: artifact_starter.cpp
uncver-stop/: CMakeLists.txt  README.md
uncver-stop/include/: artifact_stopper.h  redis_listener.h
uncver-stop/src/: main.cpp  redis_listener.cpp
uncver-traefik/dynamic/: rate-limit.yml
uncver-websocket-stream/: Dockerfile
uncver-websocket-stream/internal/hub/: client.go
uncver-websocket-stream/internal/redis/: client.go
websocket-stream/: README.md  artifact.json  go.mod
websocket-stream/.github/workflows/: release.yml
websocket-stream/internal/hub/: hub.go
whisper/: Dockerfile  artifact.json  go.mod
whisper-host-transcribe/: index.js  package-lock.json  package.json
whisper-transcribe/: Dockerfile  README.md  package.json
whisper-transcribe/src/: index.js
whisper/cmd/server/: main.go
