[package]
name = "uncver-artifacts"
version = "0.1.0"
edition = "2021"
description = "CLI tool for managing uncver artifacts with Podman integration"
license = "MIT"
authors = ["uncver"]
repository = "https://github.com/uncver/uncver-artifacts"
keywords = ["podman", "artifacts", "cli", "containers"]
categories = ["command-line-utilities"]

[[bin]]
name = "uncver-artifacts"
path = "src/main.rs"

[lib]
name = "uncver_artifacts"
path = "src/lib.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

dirs = "5.0"
reqwest = { version = "0.12", features = ["blocking"] }
notify = "8.2.0"
clap = { version = "4.5", features = ["derive"] }

[profile.release]
opt-level = 3
lto = true
